# 2025-OSTEM-TEST-sewon.jeong

./: .gitignore  CMakeLists.txt  README.md
stereo_calibration/: CMakeLists.txt  ReadMe.md  stereo_calibration.cpp
tooth_segmentation/: CMakeLists.txt  ReadMe.md  tooth_segmentation.cpp
